--- a/fourInaRow.css
+++ b/fourInaRow.css
@@ -14,9 +14,18 @@ body{
 }
 
 #board{
-    width: 300px;
-    height: 300px;
     border: 5px;
     border-style: outset;
     margin: 10px;
+    display: flex;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+}
+
+.cell{
+    margin: 2px;
+    border: 1px solid;
 }
