--- a/fourInaRow.css
+++ b/fourInaRow.css
@@ -29,3 +29,19 @@ body{
     margin: 2px;
     border: 1px solid;
 }
+
+
+@keyframes coindrop{
+    from {
+        opacity: 0%;
+        top: -300px
+    }
+    to {
+        opacity: 100%;
+        top: 0px
+    }
+}
+.coin{
+    position: relative;
+    animation: coindrop 0.2s
+}
