--- a/fourInaRow.css
+++ b/fourInaRow.css
@@ -13,11 +13,18 @@ body{
     width: 150px;
 }
 
-#board{
+.board{
+    --cell-size: 5px;
+    --player-1-color: white;
+    --player-2-color: white;
+    --cell-margin: 2px;
+    --board-width: 400px;
+
     border: 5px;
     border-style: outset;
     margin: 10px;
     display: flex;
+    width: var(--board-width);
 }
 
 .column{
@@ -26,10 +33,13 @@ body{
 }
 
 .cell{
+    box-sizing: border-box;
+    height: calc(var(--cell-size) - 2 * var(--cell-margin));
+    width: calc(var(--cell-size) - 2 * var(--cell-margin));
     margin: 2px;
     border: 1px solid;
+    background: white;
 }
-
 
 @keyframes coindrop{
     from {
@@ -41,7 +51,20 @@ body{
         top: 0px
     }
 }
+
 .coin{
+    box-sizing: border-box;
     position: relative;
-    animation: coindrop 0.2s
+    animation: coindrop 0.2s;
+    height: 100%;
+    width: 100%;
+    border-radius: 100%;
+}
+
+.player-1{
+    background: var(--player-1-color);
+}
+
+.player-2{
+    background: var(--player-2-color);
 }
